--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,4 @@
 platform = atmelsam
 board = seeed_wio_terminal
 framework = arduino
+lib_deps = https://github.com/Seeed-Studio/Seeed_Arduino_LIS3DHTR 
